# cmake_cross_compilation

./: CMakeLists.txt  README.md  main.cpp  windows_toolchain.cmake
